--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "packages/nestjs"
   ],
   "devDependencies": {
+    "prettier": "^3.2.4",
     "typescript": "^5.3.3"
   },
   "dependencies": {
