--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -2,9 +2,11 @@
   "name": "react",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001",
   "dependencies": {
     "@mui/icons-material": "^5.15.6",
-    "@mui/material": "^5.15.6",
+    "@mui/material": "^5.15.7",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.14",
     "@mui/styles": "^5.15.6",
     "@mui/x-data-grid": "^6.19.2",
     "@testing-library/jest-dom": "^5.17.0",
@@ -17,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.8",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
