--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "dotenv": "^16.4.1",
     "react-router-dom": "^6.21.3"
   }
 }
