--- a/packages/react-app/public/manifest.json
+++ b/packages/react-app/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "체육대회 행운권 등록",
+  "name": "할렐루야 교회 2024 체육대회 행운권 등록",
   "icons": [
     {
       "src": "favicon.ico",
